--- a/templates/ui-apps.html
+++ b/templates/ui-apps.html
@@ -10,8 +10,8 @@
         -->
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Odis Mobile App: Prebuilt Apps</title>
-  <meta content="Odis Mobile App" name="description" />
+  <title>فروشگاه تیکیش سرا</title>
+  <meta content="Tikishsara" name="description" />
   <meta content="themepassion" name="author" />
 
 
@@ -111,7 +111,7 @@
 <path d="M1226 3093 c-4 -9 -16 -62 -26 -118 -19 -94 -20 -148 -20 -971 0 -819 1 -876 19 -975 39 -208 90 -318 197 -425 76 -77 164 -127 279 -159 79 -22 361 -32 448 -16 79 15 167 42 167 51 0 3 -22 16 -48 28 -26 12 -71 41 -99 65 l-51 44 -64 -9 c-34 -5 -103 -6 -153 -3 -258 19 -391 134 -451 390 -18 75 -19 134 -19 995 0 503 3 931 6 950 6 33 5 36 -34 54 -22 11 -63 41 -91 68 -27 26 -51 48 -52 48 -1 0 -5 -8 -8 -17z"/>
 <path d="M2356 1304 c-27 -9 -61 -23 -75 -31 -53 -33 -123 -110 -149 -163 -24 -48 -27 -67 -27 -155 0 -87 3 -107 26 -155 103 -215 370 -276 563 -129 86 66 136 170 136 284 0 98 -27 170 -90 238 -101 111 -246 153 -384 111z"/>
 </g>
-</svg>Odis</a>
+</svg>Tikishsara</a>
 
       <a href="#" data-target="" class="waves-effect waves-circle navicon back-button htmlmode show-on-large "><i class="mdi mdi-chevron-left" data-page=""></i></a>
 
@@ -652,14 +652,14 @@
   <div class="container footer-content">
     <div class="row">
       <div class="">
-        <h5 class="logo">Odis</h5>
+        <h5 class="logo">Tikishsara</h5>
               </div>
       <div class="link-wrap">
 
                 <ul class="link-ul">
-          <li><a class="" href="#!"><i class="mdi mdi-phone"></i> +1 234 567 890</a></li>
-          <li><a class="" href="#!"><i class="mdi mdi-email"></i> email@example.com</a></li>
-          <li><a class="" href="#!"><i class="mdi mdi-map-marker"></i> FF 1, Sector-8, Tech Street, NY, USA</a></li>
+          <li><a class="" href="#!"><i class="mdi mdi-phone"></i> +98 919 912 4936</a></li>
+          <li><a class="" href="#!"><i class="mdi mdi-email"></i> info@tikishsara.ir</a></li>
+          <li><a class="" href="#!"><i class="mdi mdi-map-marker"></i>تهران بازار 15 خرداد پاساژ رضا</a></li>
         </ul>
                 <ul class="social-wrap">
           <li class="social">
