--- a/templates/ui-apps.html
+++ b/templates/ui-apps.html
@@ -507,7 +507,7 @@
     <div class="col s12 ">
     <div class="setting-box  center  img-box ">
                   <a class="img-wrap round" href="sub-apps-socialmedia.html">
-              <img alt="image" class="responsive-img " src="{% static 'assets/images/socialmedia-app.jpg' %}">
+              <img alt="image" class="responsive-img " src="{% static 'assets/images/001.jpg' %}">
           </a>
                 <a href="sub-apps-socialmedia.html">
                 <h6>Social Media App</h6>
@@ -518,7 +518,7 @@
     <div class="col s12 ">
     <div class="setting-box  center  img-box ">
                   <a class="img-wrap round" href="sub-apps-ecommerce.html">
-              <img alt="image" class="responsive-img " src="{% static 'assets/images/ecommerce-app.jpg' %}">
+              <img alt="image" class="responsive-img " src="{% static 'assets/images/002.jpg' %}">
           </a>
                 <a href="sub-apps-ecommerce.html">
                 <h6>Ecommerce App</h6>
