--- a/templates/ui-apps.html
+++ b/templates/ui-apps.html
@@ -3,16 +3,16 @@
 <html lang="en" class=" ">
 
 <head>
-  <!--
-         * @Package: Odis Mobile App
-         * @Author: themepassion
-         * @Version: 1.0
-        -->
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>فروشگاه تیکیش سرا</title>
-  <meta content="Tikishsara" name="description" />
-  <meta content="themepassion" name="author" />
+    <!--
+           * @Package: Odis Mobile App
+           * @Author: themepassion
+           * @Version: 1.0
+          -->
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title>فروشگاه تیکیش سرا</title>
+    <meta content="Tikishsara" name="description"/>
+    <meta content="themepassion" name="author"/>
 
 
   <!-- App Icons -->
@@ -36,17 +36,16 @@
   <meta name="theme-color" content="#ffffff">
 
 
+    <!-- CORE CSS FRAMEWORK - START -->
+    <link href="{% static 'assets/css/preloader.css' %}" type="text/css" rel="stylesheet" media="screen"/>
 
-
-
-
-  <!-- CORE CSS FRAMEWORK - START -->
-  <link href="{% static 'assets/css/preloader.css' %}" type="text/css" rel="stylesheet" media="screen" />
-
-  <link href="{% static 'modules/materialize/materialize.min.css' %}" type="text/css" rel="stylesheet" media="screen" />
-  <link href="{% static 'modules/fonts/mdi/appicon/appicon.css' %}" type="text/css" rel="stylesheet" media="screen" />
-  <link href="{% static 'modules/fonts/mdi/materialdesignicons.min.css' %}" type="text/css" rel="stylesheet" media="screen" />
-  <link href="{% static 'modules/perfect-scrollbar/perfect-scrollbar.css' %}" type="text/css" rel="stylesheet" media="screen" />
+    <link href="{% static 'modules/materialize/materialize.min.css' %}" type="text/css" rel="stylesheet"
+          media="screen"/>
+    <link href="{% static 'modules/fonts/mdi/appicon/appicon.css' %}" type="text/css" rel="stylesheet" media="screen"/>
+    <link href="{% static 'modules/fonts/mdi/materialdesignicons.min.css' %}" type="text/css" rel="stylesheet"
+          media="screen"/>
+    <link href="{% static 'modules/perfect-scrollbar/perfect-scrollbar.css' %}" type="text/css" rel="stylesheet"
+          media="screen"/>
 
 
   <!-- CORE CSS FRAMEWORK - END -->
@@ -519,7 +518,7 @@
     <div class="col s12 ">
     <div class="setting-box  center  img-box ">
                   <a class="img-wrap round" href="sub-apps-ecommerce.html">
-              <img alt="image" class="responsive-img " src="{% static 'assets/images/002.jpg' %}">
+              <img alt="image" class="responsive-img " src="{% static 'assets/images/1-1.jpg' %}">
           </a>
                 <a href="sub-apps-ecommerce.html">
                 <h6>کراپ کبریتی گرم بالا</h6>
@@ -531,7 +530,7 @@
     <div class="col s12 ">
     <div class="setting-box  center  img-box ">
                   <a class="img-wrap round" href="sub-apps-blog.html">
-              <img alt="image" class="responsive-img " src="{% static 'assets/images/blogs-app.jpg' %}">
+              <img alt="image" class="responsive-img " src="{% static 'assets/images/1-2.jpg' %}">
           </a>
                 <a href="sub-apps-blog.html">
                 <h6>Blogs App</h6>
@@ -542,7 +541,7 @@
     <div class="col s12 ">
     <div class="setting-box  center  img-box ">
                   <a class="img-wrap round" href="sub-apps-news.html">
-              <img alt="image" class="responsive-img " src="{% static 'assets/images/news-app.jpg' %}">
+              <img alt="image" class="responsive-img " src="{% static 'assets/images/1-3.jpg' %}">
           </a>
                 <a href="sub-apps-news.html">
                 <h6>News App</h6>
@@ -553,7 +552,7 @@
     <div class="col s12 ">
     <div class="setting-box  center  img-box ">
                   <a class="img-wrap round" href="sub-apps-events.html">
-              <img alt="image" class="responsive-img " src="{% static 'assets/images/events-app.jpg' %}">
+              <img alt="image" class="responsive-img " src="{% static 'assets/images/1-4.jpg' %}">
           </a>
                 <a href="sub-apps-events.html">
                 <h6>Events App</h6>
@@ -564,7 +563,7 @@
     <div class="col s12 ">
     <div class="setting-box  center  img-box ">
                   <a class="img-wrap round" href="sub-apps-courses.html">
-              <img alt="image" class="responsive-img " src="{% static 'assets/images/courses-app.jpg' %}">
+              <img alt="image" class="responsive-img " src="{% static 'assets/images/1-5.jpg' %}">
           </a>
                 <a href="sub-apps-courses.html">
                 <h6>Online Course App</h6>
@@ -575,7 +574,7 @@
     <div class="col s12 ">
     <div class="setting-box  center  img-box ">
                   <a class="img-wrap round" href="sub-apps-portfolio.html">
-              <img alt="image" class="responsive-img " src="{% static 'assets/images/portfolio-app.jpg' %}">
+              <img alt="image" class="responsive-img " src="{% static 'assets/images/1-6.jpg' %}">
           </a>
                 <a href="sub-apps-portfolio.html">
                 <h6>Portfolio App</h6>
@@ -586,7 +585,7 @@
     <div class="col s12 ">
     <div class="setting-box  center  img-box ">
                   <a class="img-wrap round" href="sub-apps-chat.html">
-              <img alt="image" class="responsive-img " src="{% static 'assets/images/chat-app.jpg' %}">
+              <img alt="image" class="responsive-img " src="{% static 'assets/images/1-7.jpg' %}">
           </a>
                 <a href="sub-apps-chat.html">
                 <h6>Chat & Messages App</h6>
@@ -597,7 +596,7 @@
     <div class="col s12 ">
     <div class="setting-box  center  img-box ">
                   <a class="img-wrap round" href="sub-apps-wallet.html">
-              <img alt="image" class="responsive-img " src="{% static 'assets/images/wallet-app.jpg' %}">
+              <img alt="image" class="responsive-img " src="{% static 'assets/images/1-8.jpg' %}">
           </a>
                 <a href="sub-apps-wallet.html">
                 <h6>Payment & Wallet App</h6>
@@ -608,7 +607,7 @@
     <div class="col s12 ">
     <div class="setting-box  center  img-box ">
                   <a class="img-wrap round" href="sub-apps-university.html">
-              <img alt="image" class="responsive-img " src="{% static 'assets/images/university-app.jpg' %}">
+              <img alt="image" class="responsive-img " src="{% static 'assets/images/1-9.jpg' %}">
           </a>
                 <a href="sub-apps-university.html">
                 <h6>University App</h6>
@@ -619,7 +618,7 @@
     <div class="col s12 ">
     <div class="setting-box  center  img-box ">
                   <a class="img-wrap round" href="sub-apps-contacts.html">
-              <img alt="image" class="responsive-img " src="{% static 'assets/images/contacts-app.jpg' %}">
+              <img alt="image" class="responsive-img " src="{% static 'assets/images/1-10.jpg' %}">
           </a>
                 <a href="sub-apps-contacts.html">
                 <h6>Contacts App</h6>
@@ -630,7 +629,7 @@
     <div class="col s12 ">
     <div class="setting-box  center  img-box ">
                   <a class="img-wrap round" href="sub-apps-mailbox.html">
-              <img alt="image" class="responsive-img " src="{% static 'assets/images/mailbox-app.jpg' %}">
+              <img alt="image" class="responsive-img " src="{% static 'assets/images/1-11.jpg' %}">
           </a>
                 <a href="sub-apps-mailbox.html">
                 <h6>Mailbox App</h6>
